--- a/ipython-classnotes/9 - Objects.ipynb
+++ b/ipython-classnotes/9 - Objects.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:39b9e85f2c2d57db1d2e19a02a780d9b66aed091262af290917a335610b8e966"
+  "signature": "sha256:362da17a03d05d8a8dd3f66d6bbe6ccf4a3a9d405f47ed61605d54325e562ca1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -291,7 +291,172 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "''' Class Exampled: Units '''\n",
+      "\n",
+      "class Units:\n",
+      "    \n",
+      "    # called when extantiates unit\n",
+      "    def __init__(self, value, arg1):\n",
+      "        # make str passed list of 1 str\n",
+      "        names = [ arg1 ] if isinstance(arg1, str) else arg1\n",
+      "        self.name = name\n",
+      "        self.value = value\n",
+      "    \n",
+      "    def __add__(self, other):\n",
+      "        # we require the same unit name, for now.\n",
+      "        assert self.name == other.name, (self.name, other.name)\n",
+      "        return Units(self.value + other.value, self.name)\n",
+      "    \n",
+      "    def __mul__(self, other):\n",
+      "        # Operator special methods always return new instances.\n",
+      "        return Units(self.value * other, self.name)\n",
+      "    \n",
+      "    def __rmul__(self, other):\n",
+      "        # note calling __mul__ will cost as there is one more function call\n",
+      "        return self.__mul__(other)\n",
+      " \n",
+      "    #def __neg__(self):\n",
+      "        # return -\n",
+      "    \n",
+      "    #def __repr__(self):\n",
+      "            #return 'Units(' + repr(self.value))\n",
+      "    \n",
+      "    def __str__(self):\n",
+      "        return str(self.value) + ' ' + self.name\n",
+      "    \n",
+      "    #def __sub__(self):\n",
+      "        # same as add, but diff\n",
+      "\n",
+      "\n",
+      "# calls __str__\n",
+      "print(Units(12, 'ft'))\n",
+      "\n",
+      "twoFt = Units(2, 'ft')\n",
+      "\n",
+      "# calls __mul__\n",
+      "print(twoFt * 5)\n",
+      "\n",
+      "# calls __rmul__\n",
+      "print(5 * twoFt)\n",
+      "\n",
+      "# calls __add__\n",
+      "ft = Units(1, 'ft')\n",
+      "print (5*ft + 3*ft + Units(12,'ft'))\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'name' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-15-6415d527bc3a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;31m# calls __str__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUnits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ft'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[0mtwoFt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUnits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ft'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-15-6415d527bc3a>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, value, arg1)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;31m# make str passed list of 1 str\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mnames\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0marg1\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marg1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0marg1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "''' Trick with larger data sets '''\n",
+      "''' ex: processing files, '''\n",
+      "# append results onto a list\n",
+      "# then join/concat it to a string"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "' ex: processing files, '"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "''' trasitive closure '''\n",
+      "# given the ability in units to convert from a-b & b-c\n",
+      "# consider in units to convert a-c"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "' trasitive closure '"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "''' Inheritance '''\n",
+      "from math import sqrt, pi\n",
+      "\n",
+      "class Object2D:\n",
+      "    # base 2d object\n",
+      "    print(self.name, \"of area\", self.area())\n",
+      "    \n",
+      "class Circle(Object2D):\n",
+      "    name = \"circle\"\n",
+      "    def __init__(self, r):\n",
+      "        super().__init__()  # super returns parent class\n",
+      "        self.r = r\n",
+      "    \n",
+      "    def area(self):\n",
+      "        return pi * self.r**2\n",
+      "    \n",
+      "# class Triangle(Object2D):\n",
+      "\n",
+      "# class RightTriangle(Triangle):\n",
+      "\n",
+      "# class Rectangle(Object2D):\n",
+      "\n",
+      "# class Square(Rectangle):\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'self' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-21-8f4cfc1f897b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmath\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msqrt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mObject2D\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;31m# base 2d object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"of area\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-21-8f4cfc1f897b>\u001b[0m in \u001b[0;36mObject2D\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mObject2D\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# base 2d object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"of area\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mCircle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mObject2D\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 21
     }
    ],
    "metadata": {}
