adding class notes

--- a/ipython-classnotes/6 - fuctions.ipynb
+++ b/ipython-classnotes/6 - fuctions.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:37655a341303a233eb2ced7f187863f29a6b704cf65d8d9cf7081859e17d6308"
+  "signature": "sha256:da102804d838c27b78779e08ab44880f3d7a065f7f0e8af023e1591e3dbce093"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -639,7 +639,23 @@
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = [1, 2, 3]\n",
+      "b = [2, 4, 5]\n",
+      "\n",
+      "def finddup(a, b):\n",
+      "    val\n",
+      "    difference\n",
+      "    if r not and break"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
