get these class notes

--- a/ipython-classnotes/13 - Checking and Debugging.ipynb
+++ b/ipython-classnotes/13 - Checking and Debugging.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cf266e4d20d915840a759865105f2a25f37e1e9229d7d7acbec277de0789ae95"
+  "signature": "sha256:db569f7c168f5734711c537ea29f48ef407d1ce133eaa68a166096631a9a1400"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,7 +41,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "''' Debugging '''\n"
+      "''' Debugging '''\n",
+      "# pdb | it's like gdb, but for python\n",
+      "# pdb3 | python3, duh\n",
+      "\n",
+      "# see notes, try it out"
      ],
      "language": "python",
      "metadata": {},
