adding class notes again

--- a/ipython-classnotes/Web Framework.ipynb
+++ b/ipython-classnotes/Web Framework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:caa01c16f4f03ae04a0ed3a8c445774a955ff5f9c8dbca437a8ac8d609177458"
+  "signature": "sha256:cd42ec4f5a9ce19155f06f2e5427838247a5e904d4360bd89880d5d110876c0d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "''' Django Web Framework '''\n"
+      "''' Web Framework '''\n",
+      "# Django\n",
+      "# Flask"
      ],
      "language": "python",
      "metadata": {},
@@ -22,7 +24,7 @@
        "output_type": "pyout",
        "prompt_number": 1,
        "text": [
-        "' Django Web Framework '"
+        "' Web Framework '"
        ]
       }
      ],
@@ -32,7 +34,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "''' Flask Micro Web Framework '''"
+      "''' Creating User Views '''\n",
+      "# remember MVC? "
      ],
      "language": "python",
      "metadata": {},
@@ -42,7 +45,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "' Flask Micro Web Framework '"
+        "' Creating User Views '"
        ]
       }
      ],
